<resources>
    <string name="app_name">ProjectX</string>
    <string name="signInBtn">Sign In</string>
    <string name="signInTextView">Sign In</string>
    <string name="signInEmailAddressField">user@email.no</string>
    <string name="signInPasswordField">**********</string>
    <string name="emailTag">Email</string>
    <string name="passwordTag">Password</string>
    <string name="forgotPassword">Forgot password?</string>

    <!-- Calendar -->
    <string name="dayMonthPlaceholder">DayMonthPlaceholder</string>
    <string name="defaultCalendarCellValue">1</string>
    <string name="daySunday">SUN</string>
    <string name="dayMonday">MON</string>
    <string name="dayTuesday">TUE</string>
    <string name="dayWednesday">WED</string>
    <string name="dayThursday">THU</string>
    <string name="dayFriday">FRI</string>
    <string name="daySaturday">SAT</string>

    <string name="emptyString"> </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="event_colors">
        <item>Green</item>
        <item>Purple</item>
        <item>Orange</item>
        <item>Blue</item>
    </string-array>
</resources>