<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/signInLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/signInTextView"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signInEmailTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailTag"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/signInEmailInputField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInLogo"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/signInEmailInputField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/sign_in_form_field"
        android:ems="10"
        android:hint="@string/signInEmailAddressField"
        android:inputType="textEmailAddress"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/signInPasswordInputField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signInPasswordTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordTag"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/signInPasswordInputField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/signInPasswordInputField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:background="@drawable/sign_in_form_field"
        android:ems="10"
        android:hint="@string/signInPasswordField"
        android:inputType="textPassword"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/signInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/forgotPasswordButton"
        android:layout_width="121dp"
        android:layout_height="53dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/forgotPassword"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.752"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInPasswordInputField" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:background="@drawable/signin_button"
        android:elevation="4dp"
        android:text="@string/signInBtn"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>